--- a/app/assets/stylesheets/pokemons.scss
+++ b/app/assets/stylesheets/pokemons.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the pokemon controller here.
+// Place all the styles related to the pokemons controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
