first test for index page

--- a/app/views/pokemons/index.html.haml
+++ b/app/views/pokemons/index.html.haml
@@ -12,3 +12,6 @@
   = "There are #{Type.count} Types."
 %p.text-center
   = "#{Type.first.inspect}"
+
+- Pokemon.all.each do |poke|
+  %img{src: poke.image_url, style: "width: 5%"}
