--- a/app/views/pokemons/index.html.haml
+++ b/app/views/pokemons/index.html.haml
@@ -14,4 +14,4 @@
   = "#{Type.first.inspect}"
 
 - Pokemon.all.each do |poke|
-  %img{src: poke.image_url, style: "width: 5%"}
+  = link_to image_tag(poke.image_url, style: "width: 5%"), pokemon_path(poke)
