--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "pokemons";
+@import "egg_groups";
+@import "types";
 
-%h1 {
-  color: #F00;
-}
