--- a/app/assets/stylesheets/pokemons.scss
+++ b/app/assets/stylesheets/pokemons.scss
@@ -2,6 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-// .index-pokemon {
-//   width: 5%;
-// }
+.pokemon-index {
+  width: 70%;
+  img {
+    width: 5%;
+  }
+}
+
+h1 {
+  color: #f00;
+}
